# securelog

securelog-client/: .gitignore  Cargo.toml  example-client.toml
securelog-client/debian/: postint  preinst  service
securelog-client/src/: conf.rs  constants.rs  main.rs  models.rs  searchrunner.rs  webclient.rs
securelog-server/: .gitignore  CONFIG.MD  Cargo.toml  Dockerfile  NOTES.MD  debian-server.toml  docker-compose.yml  example-server.toml
securelog-server/debian/: preinst  service
securelog-server/src/: conf.rs  constants.rs  main.rs  models.rs  webhooks.rs
securelog-server/src/html/: clients.html  index.html  schedule.html  search_result_form.html  search_results.html  searches.html  webhooks.html
securelog-server/src/js/: clients.js  search_result_form.js  search_results.js  searches.js  webhooks.js
securelog-server/src/sql/: client.rs  mod.rs  user.rs  webhooks.rs
securelog-server/src/web/: client.rs  html.rs  mod.rs  user.rs
