[package]
name = "securelog-server"
authors = ["Madelyn Seal <winterberry42@protonmail.com>"]
license = "GPL-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
depends="$auto"
assets = [
    ["target/release/securelog-server", "/usr/bin/securelog-server", "755"],
    ["debian-server.toml", "/etc/securelog/example-server.toml", "644"]
]
maintainer-scripts="debian/"
systemd-units={enable=true}

[dependencies]
actix-web={version="4.0", features=["rustls"]}
actix-identity="0.4"
rustls = "0.20"
rustls-pemfile = "1.0"

tokio="1"
tokio-postgres={version="0.7", features=["with-chrono-0_4"]}
deadpool-postgres={version="0.10"}
deadpool="0.9"

rand="0.8"

chrono={version="0.4", features=["serde"]}
serde="1.0"
serde_derive="1.0"
serde_json="1.0"

log="0.4"
flexi_logger="0.22"

config={version="0.13", features=["toml"]}
lazy_static="1"

anyhow="1"
thiserror="1"

clap={version="3", features=["cargo"]}

bcrypt="0.12"

rpassword="6"
rust-embed="6.3"

webhook="2"
